Fixed dark mode on maps.
In future, change entire map to dark-mode, not just the text.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -901,3 +901,11 @@ pre {
     opacity: 1;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .leaflet-popup-content {
+    color: black;
+    font-weight: 800;
+  }
+}
+
